# lens

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md
docs/: DEVELOPING_A_LENS.md  LENS_PACKAGE_SPEC_V2.md  SURFACE_SPEC_V1.md
optics/: manifest.toml
src/: context.rs  discovery.rs  error.rs  events.rs  lens.rs  lib.rs  loader.rs  manifest.rs  mcp_server.rs  oauth.rs  output_spec.rs  streaming.rs
store/domain-hacks/: .gitignore  Cargo.toml  README.md  lib.rs  plugin.toml
store/domain-hacks/src/: domains.rs  error.rs  lib.rs  mcp_server.rs  plugin.rs  strategies.rs  types.rs  utils.rs
