[package]
name = "lens"
version = "0.1.0"
edition = "2021"
authors = ["Fuego Labs <hello@fuego.wtf>"]
description = "A trait standard for crafting specialized agent perspectives"
license = "MIT"
repository = "https://github.com/fuego-wtf/lens"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
