[workspace]
members = ["store/*"]
resolver = "2"

[package]
name = "lens"
version = "0.1.0"
edition = "2021"
authors = ["Fuego Labs <hello@fuego.wtf>"]
description = "A trait standard for crafting specialized agent perspectives"
license = "MIT"
repository = "https://github.com/fuego-wtf/lens"

[features]
default = []
runtime = ["libloading", "dirs"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-stream = "0.1"

# Runtime feature deps (discovery + dynamic loading)
libloading = { version = "0.8", optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
tempfile = "3.15"
libloading = "0.8"
dirs = "6.0"
